--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -422,11 +422,11 @@
                         <!-- First quarter -->
                         <LinearLayout
                             android:layout_width="0dp"
-                            android:layout_height="0dp"
+                            android:layout_height="206dp"
                             android:layout_rowWeight="1"
                             android:layout_columnWeight="1"
-                            android:orientation="vertical"
-                            android:gravity="center">
+                            android:gravity="center"
+                            android:orientation="vertical">
 
                             <ImageView
                                 android:layout_width="100dp"
@@ -439,9 +439,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="20 transactions"
-                                android:textSize="@dimen/normal_size"
                                 android:textColor="@color/white"
-                                android:textStyle="bold"/>
+                                android:textSize="@dimen/normal_size"
+                                android:textStyle="bold" />
 
                         </LinearLayout>
 
@@ -544,7 +544,8 @@
                     android:layout_height="1000dp"
                     android:layout_marginHorizontal="50dp"
                     android:background="@drawable/background_dark_blue"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:id="@+id/linearLayout_custom_report">
 
                     <Spinner
                         android:layout_marginStart="@dimen/radius_2"
