--- a/app/src/main/res/layout/activity_goal_list_view.xml
+++ b/app/src/main/res/layout/activity_goal_list_view.xml
@@ -1,9 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.GoalListViewActivity">
+    android:background="@color/dark_blue"
+    tools:context="com.spenditure.presentation.GoalListViewActivity"
+    android:orientation="horizontal">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_marginRight="100dp"
+        android:layout_marginBottom="10dp">
+
+        <TextView
+            android:id="@+id/textview_goal_name"
+            android:text="Goal 1"
+            android:textSize="18dp"
+            android:textColor="@color/white"
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/textview_amount"
+            android:text="$3.95"
+            android:textColor="@color/white"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_marginRight="100dp"
+        android:layout_marginBottom="10dp"
+        android:layout_gravity="right">
+
+        <TextView
+            android:id="@+id/textview_category"
+            android:text="Food"
+            android:textSize="18dp"
+            android:textColor="@color/white"
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/textview_completion_date"
+            android:text="Complete by:"
+            android:textColor="@color/white"
+            android:layout_marginLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+
+</LinearLayout>
