--- a/app/src/main/res/layout/activity_goal_list_view.xml
+++ b/app/src/main/res/layout/activity_goal_list_view.xml
@@ -10,10 +10,10 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:orientation="vertical"
         android:layout_marginRight="100dp"
-        android:layout_marginBottom="10dp">
+        android:layout_marginBottom="10dp"
+        android:layout_gravity="start">
 
         <TextView
             android:id="@+id/textview_goal_name"
@@ -34,14 +34,18 @@
 
     </LinearLayout>
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:orientation="vertical"
-        android:layout_marginRight="100dp"
+        android:layout_marginRight="50dp"
         android:layout_marginBottom="10dp"
-        android:layout_gravity="right">
+        android:layout_gravity="end">
 
         <TextView
             android:id="@+id/textview_category"
